# requests-engine

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
requests_engine/: engine.py
src/requests_engine/: __init__.py  conversation.py  engine.py  model_batch_inference_cost.py  model_pricing.py
src/requests_engine/providers/: __init__.py  abstract_provider.py  aws_anthropic_provider.py  aws_provider.py  gcp_beta_completions_provider.py  openai_compatible_api_provider.py
tests/: aws_anthropic_test.py  common_tests.py  test_all_providers.py
